@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(actuals,clm)
+S3method(confint,clm)
 S3method(logLik,clm)
 S3method(nobs,clm)
 S3method(nparam,clm)
@@ -18,6 +19,7 @@ export(ccov2cor)
 export(clm)
 export(complex2mat)
 export(complex2vec)
+export(covar)
 export(cvar)
 export(invert)
 export(mat2complex)
@@ -54,6 +56,8 @@ importFrom(stats,logLik)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,nobs)
+importFrom(stats,qt)
+importFrom(stats,resid)
 importFrom(stats,residuals)
 importFrom(stats,sd)
 importFrom(stats,setNames)
