@@ -1,11 +1,15 @@
 #' Pseudo Correlation, Variance and Covariance (Matrices)
 #'
 #' Functions return (complex) pseudo-variance, pseudo-covariance and pseudo-correlation based on the
-#' provided complex vector/matrix \code{x}.
+#' provided complex vector/matrix \code{x}. Function \code{covar()} returns the covariance
+#' matrix based
 #'
 #' Functions calculate pseudo statistics for complex variables. Only the parametric
 #' pseudo-correlation is supported by the function. If \code{x} is matrix, then \code{y}
 #' is ignored.
+#'
+#' \code{covar()} function returns a covariance matrix calculated for the provided complex
+#' vector or matrix.
 #'
 #' @author Ivan Svetunkov, \email{ivan@svetunkov.ru}
 #' @keywords univar
@@ -13,7 +17,6 @@
 #' @param x vector or matrix of complex variables. If it is matrix then the
 #' variable \code{y} is ignored.
 #' @param y second vector to calculate pseudo-covariance or pseudo-correlations with.
-#' @param V complex pseudo-covariance matrix.
 #' @param ... parameters passed to \code{mean()} functions. For example, this can be
 #' \code{na.rm=TRUE} to remove missing values or \code{trim} to define the trimming
 #' in the mean (see \link[base]{mean}).
@@ -75,8 +78,27 @@ ccor <- function(x, y, ...){
     }
 }
 
+#' @param V complex pseudo-covariance matrix.
 #' @rdname ccor
 #' @export
 ccov2cor <- function(V){
     return(V / sqrt(diag(V) %*% t(diag(V))));
+}
+
+
+#' @param df Number of degrees of freedom to use in the calculation of the covariance matrix.
+#' @rdname ccor
+#' @export
+covar <- function(x, df=NULL){
+    obs <- length(x);
+
+    if(is.null(df)){
+        df <- obs-1;
+    }
+
+    if(is.complex(x)){
+        x <- complex2vec(x);
+    }
+
+    return(t(x) %*% x / df);
 }
