@@ -8,6 +8,8 @@ Changes:
 * complex2mat() and complex2vec() functions for switching between complex variables and matrices/vectors.
 * mat2complex() and vec2complex() functions to reverse what the previous two do.
 * vcov(), confint() and summary() for clm class.
+* covar() function to produce covariance matrix from a random complex variable.
+* summary.clm() now has an option to produce real-valued parameters via complex=FALSE.
 
 
 complex v0.0.1 (Release data: 2019-07-01)
